<resources>
    <string name="app_name">ReadyToGo</string>
    <string name="welcome_message">Welcome To ReadyToGo</string>
    <string name="startscreen_description">Please sign in to your ReadyToGo-account</string>
    <string name="logo">Logo</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="startscreen_info">A Project By CW2B2</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="loginscreen_message">Sign in to your account</string>
    <string name="title_activity_maps">Map</string>
    <string name="name">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register_title">Create Your ReadyToGo Account</string>
    <string name="invalid_email">Please enter a valid email address</string>
    <string name="bike_id">Bike ID:</string>
    <string name="current_distance_from_location">Distance to bike:</string>
    <string name="meters">m</string>
    <string name="address">Address:</string>
    <string name="rent">Click here to rent this bike</string>
    <string name="unlock">Unlock</string>
    <string name="map">Map</string>
    <string name="lock_unlock">Toggle Lock</string>
    <string name="end_contract">End Contract</string>
    <string name="end_contract_info">Approach NFC module\nto end your contract</string>
    <string name="unlock_info">Approach NFC module\nto toggle the bike lock</string>
    <string name="signout">Sign Out</string>
    <string name="not_renting">You\'re not renting a bike!</string>
    <string name="toggle_toggle">Toggle Lock</string>


</resources>
